--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "history": "^2.1.0",
     "immutable": "^3.8.1",
     "material-ui": "^0.15.0",
+    "moment": "^2.13.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-pure-render": "^1.0.2",
