Get adding a todo working correctly

--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
     "fontfaceobserver": "^1.7.1",
     "history": "^2.1.0",
     "immutable": "^3.8.1",
+    "lodash": "^4.13.1",
     "material-ui": "^0.15.0",
     "moment": "^2.13.0",
     "react": "^15.0.1",
