--- a/package.json
+++ b/package.json
@@ -152,12 +152,14 @@
     "chalk": "^1.1.3",
     "compression": "^1.6.1",
     "express": "^4.13.4",
+    "flux": "^2.1.1",
     "fontfaceobserver": "^1.7.1",
     "history": "^2.1.0",
     "immutable": "^3.8.1",
     "lodash": "^4.13.1",
     "material-ui": "^0.15.0",
     "moment": "^2.13.0",
+    "object-assign": "^4.1.0",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-pure-render": "^1.0.2",
