Cache the todos in the backend

--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "redux-immutable": "^3.0.6",
+    "redux-promise": "^0.5.3",
     "redux-saga": "^0.10.0",
     "reselect": "^2.5.1",
     "sanitize.css": "^3.3.0",
