--- a/package.json
+++ b/package.json
@@ -158,10 +158,10 @@
     "history": "^2.1.0",
     "immutable": "^3.8.1",
     "lodash": "^4.13.1",
-    "material-ui": "^0.15.0",
     "moment": "^2.13.0",
     "object-assign": "^4.1.0",
     "react": "^15.0.1",
+    "react-bootstrap": "^0.30.2",
     "react-dom": "^15.0.1",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.4.5",
