--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "object-assign": "^4.1.0",
     "react": "^15.0.1",
     "react-bootstrap": "^0.30.2",
+    "react-bootstrap-date-picker": "^3.1.0",
     "react-dom": "^15.0.1",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.4.5",
