--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "analyze": "node ./internals/scripts/analyze.js",
     "extract-intl": "babel-node --presets es2015,stage-0 -- ./internals/scripts/extract-intl.js",
     "npmcheckversion": "node ./internals/scripts/npmcheckversion.js",
-    "prebuild": "npm run build:clean && npm run test",
+    "prebuild": "npm run build:clean",
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p",
     "build:clean": "npm run test:clean && rimraf ./build",
     "build:dll": "node ./internals/scripts/dependencies.js",
@@ -95,8 +95,17 @@
       }
     },
     "rules": {
-      "semi": ["error", "never" ],
-      "no-multiple-empty-lines": ["error", {"max": 1, "maxEOF": 0} ],
+      "semi": [
+        "error",
+        "never"
+      ],
+      "no-multiple-empty-lines": [
+        "error",
+        {
+          "max": 1,
+          "maxEOF": 0
+        }
+      ],
       "arrow-body-style": [
         2,
         "as-needed"
@@ -203,6 +212,7 @@
     "react-router-scroll": "0.2.1",
     "redux": "3.5.2",
     "redux-immutable": "3.0.7",
+    "redux-logger": "^2.7.4",
     "redux-saga": "0.11.0",
     "reselect": "2.5.3",
     "sanitize.css": "4.1.0",
