--- a/package.json
+++ b/package.json
@@ -7,42 +7,42 @@
     "url": "git://github.com/mxstbr/react-boilerplate.git"
   },
   "engines": {
-    "npm": ">=3"
+    "yarn": ">=3"
   },
   "author": "Max Stoiber",
   "license": "MIT",
   "scripts": {
     "analyze:clean": "rimraf stats.json",
-    "preanalyze": "npm run analyze:clean",
+    "preanalyze": "yarn run analyze:clean",
     "analyze": "node ./internals/scripts/analyze.js",
     "extract-intl": "babel-node --presets es2015,stage-0 -- ./internals/scripts/extract-intl.js",
-    "npmcheckversion": "node ./internals/scripts/npmcheckversion.js",
-    "prebuild": "npm run build:clean",
+    "yarncheckversion": "node ./internals/scripts/npmcheckversion.js",
+    "prebuild": "yarn run build:clean",
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p",
-    "build:clean": "npm run test:clean && rimraf ./build",
+    "build:clean": "yarn run test:clean && rimraf ./build",
     "build:dll": "node ./internals/scripts/dependencies.js",
     "start": "cross-env NODE_ENV=development node server",
     "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node server",
-    "start:production": "npm run build && npm run start:prod",
+    "start:production": "yarn run build && yarn run start:prod",
     "start:prod": "cross-env NODE_ENV=production node server",
     "pagespeed": "node ./internals/scripts/pagespeed.js",
-    "presetup": "npm i chalk shelljs",
+    "presetup": "yarn i chalk shelljs",
     "setup": "node ./internals/scripts/setup.js",
     "clean": "shjs ./internals/scripts/clean.js",
-    "clean:all": "npm run analyze:clean && npm run test:clean && npm run build:clean",
+    "clean:all": "yarn run analyze:clean && yarn run test:clean && yarn run build:clean",
     "generate": "plop --plopfile internals/generators/index.js",
-    "lint": "npm run lint:js && npm run lint:css",
+    "lint": "yarn run lint:js && yarn run lint:css",
     "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern internals/scripts",
-    "lint:js": "npm run lint:eslint -- . ",
+    "lint:js": "yarn run lint:eslint -- . ",
     "lint:css": "stylelint ./app/**/*.css",
     "lint:staged": "lint-staged",
-    "pretest": "npm run test:clean",
+    "pretest": "yarn run test:clean",
     "test:clean": "rimraf ./coverage",
     "test": "cross-env NODE_ENV=test karma start internals/testing/karma.conf.js --single-run",
-    "test:watch": "npm run test -- --auto-watch --no-single-run",
-    "test:firefox": "npm run test -- --browsers Firefox",
-    "test:safari": "npm run test -- --browsers Safari",
-    "test:ie": "npm run test -- --browsers IE",
+    "test:watch": "yarn run test -- --auto-watch --no-single-run",
+    "test:firefox": "yarn run test -- --browsers Firefox",
+    "test:safari": "yarn run test -- --browsers Safari",
+    "test:ie": "yarn run test -- --browsers IE",
     "coveralls": "cat ./coverage/lcov/lcov.info | coveralls"
   },
   "lint-staged": {
